--- a/SpeckleAutomateDotnetExample/SpeckleAutomateDotnetExample.csproj
+++ b/SpeckleAutomateDotnetExample/SpeckleAutomateDotnetExample.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.102.2" />
     <PackageReference Include="Speckle.Automate.Sdk" Version="2.18.0-fileInput" />
     <PackageReference Include="Speckle.Objects" Version="2.17.0-automate3" />
+    <PackageReference Include="system.text.json" Version="8.0.2" />
   </ItemGroup>
 </Project>
